--- a/erp-quimicos/src/main/webapp/vm/provfacturas/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/provfacturas/startup.vm
@@ -306,53 +306,13 @@
 															</tr>
 														</thead>
 													</table>
-													<div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:1030; height: 115px; border:1px solid #C1DAD7 !important;">	
+													<div style="overflow:scroll; overflow-x:hidden; overflow-y:auto; width:1030; height:115px; border:1px solid #C1DAD7 !important;">	
 														<table>
 															<tbody style="background-color: #FFFFFF;" valign="top" id="grid_productos" class="gral">
 																
 															</tbody>
 														</table>
 													</div>
-													
-													
-													
-													
-													
-													
-													
-													
-													
-													<!--
-													<div id="contenedor_grid" style="width:945px; height:145px; overflow:scroll; overflow-x: auto; overflow-y: auto;">
-														<table border="0">
-															<tr style="background-color:#A8A9AB; font-weight: bold;">
-																<td width="65" style="border: solid 1px #313E74;">&nbsp;#</td>
-																<td width="85" style="border: solid 1px #313E74;">&nbsp;C&oacute;digo</td>
-																<td width="172" style="border: solid 1px #313E74;">&nbsp;Nombre</td>
-																<td width="70" style="border: solid 1px #313E74;">Unidad</td>
-																<td width="70" style="border: solid 1px #313E74;">Presentaci&oacute;n</td>
-																<td width="67" style="border: solid 1px #313E74;">Cantidad</td>
-																<td width="70" style="border: solid 1px #313E74;">Costo</td>
-																<td width="70" style="border: solid 1px #313E74;">Descuento</td>
-																<td width="80" style="border: solid 1px #313E74;">Importe</td>
-																<td width="82" style="border: solid 1px #313E74;">Impuesto</td>
-																<td width="90" style="border: solid 1px #313E74;">Serie</td>
-																<td width="89" style="border-top: solid 1px #313E74; border-bottom: solid 1px #313E74;">Ped.&nbsp;aduanal</td>
-																<td width="83" style="border: solid 1px #313E74;">Caducidad</td>
-															</tr>
-															<tr>
-																<td colspan="11">
-																	<div align="left" style="width:944px; height:119px; overflow:scroll; overflow-x: auto; overflow-y: auto;">
-																		<table border="0" id="grid_productos" >
-																																		
-																		</table>
-																	</div>
-																</td>					
-															</tr>
-
-														</table>
-													</div>
-													-->
 													
 												</td>
 											</tr>
@@ -362,8 +322,8 @@
 													<table border="0" width="100%">
 														<tr>
 															<td width="10" ></td>
-															<td width="650" colspan="5" rowspan="6">
-																<div id="div_warning_grid"  style="width:640px; height:90px; display:none;">
+															<td width="700" >
+																<div id="div_warning_grid"  style="width:640px; height:120px; display:none;">
 																	<table border="0">
 																		<tr>
 																			<td width="20"></td>
@@ -378,7 +338,7 @@
 																		</tr>
 																		<tr>
 																			<td colspan="4" style="border: solid 1px #313E74;"> 
-																				<div align="left" style="width:640px; height:70px; overflow:scroll; overflow-x: auto; overflow-y: auto; color:#d41000;">
+																				<div align="left" style="width:640px; height:90px; overflow:scroll; overflow-x: auto; overflow-y: auto; color:#d41000;">
 																					<table id="grid_warning" border="0">
 																					<!--aqui va el listado de errores del grid-->
 																					</table>
@@ -388,47 +348,68 @@
 																	</table>
 																</div>
 															</td>
-															<td width="100" align="right" style="font-weight: bold;">Flete&nbsp;&nbsp;</td>
-															<td width="130">
-																<INPUT TYPE="text" name="flete" value="0" style="width:130px; text-align:right">
-																<input type="hidden" name="iva_flete">
+															<td align="right">
+																<div style="height:120px;">
+																	<table border="0">
+																		<tr>
+																			<td width="10"></td>
+																			<td width="100" align="right" style="font-weight:bold;">Flete&nbsp;&nbsp;</td>
+																			<td width="130">
+																				<INPUT TYPE="text" name="flete" value="0" style="width:130px; text-align:right;">
+																				<input type="hidden" name="iva_flete">
+																			</td>
+																		</tr>
+																		<tr>
+																			<td width="10"></td>
+																			<td width="100" align="right" style="font-weight: bold;">Subtotal&nbsp;&nbsp;</td>
+																			<td width="130"><INPUT TYPE="text" name="subtotal" value="0" style="width:130px; text-align:right" readOnly="true"></td>
+																		</tr>
+
+																		<!--
+																		<tr>
+																			<td width="10"></td>
+																			<td width="120" align="right" style="font-weight: bold;">Descuento&nbsp;&nbsp;</td>
+																			<td width="130"><INPUT TYPE="text" name="descuento" value="0" style="width:130px; text-align:right" readOnly="true"></td>
+																		</tr>
+																		-->
+																		
+																		<tr id="tr_ieps">
+																			<td width="10"></td>
+																			<td width="100" align="right" style="font-weight: bold;">IEPS&nbsp;&nbsp;</td>
+																			<td width="130"><input type="text" name="total_ieps" value="0" style="width:130px; text-align:right;" readOnly="true"></td>
+																		</tr>
+																		<tr>
+																			<td width="10"></td>
+																			<td width="100" align="right" style="font-weight: bold;">IVA&nbsp;&nbsp;</td>
+																			<td width="130"><INPUT TYPE="text" name="totimpuesto" value="0" style="width:130px; text-align:right" readOnly="true"></td>
+																		</tr>
+																		
+																		<tr id="tr_isr">
+																			<td width="10"></td>
+																			<td width="100" align="right" style="font-weight: bold;">RET&nbsp;ISR&nbsp;&nbsp;</td>
+																			<td width="130"><INPUT TYPE="text" name="total_ret_isr" value="0" style="width:130px; text-align:right" readOnly="true"></td>
+																		</tr>
+																		
+																		<tr id="tr_ret_iva">
+																			<td width="10"></td>
+																			<td width="100" align="right" style="font-weight: bold;">RET&nbsp;IVA&nbsp;&nbsp;</td>
+																			<td width="130"><INPUT TYPE="text" name="retencion" value="0" style="width:130px; text-align:right" readOnly="true"></td>
+																		</tr>
+																		<tr>
+																			<td width="10"></td>
+																			<td width="100" align="right" style="font-weight: bold;">Total&nbsp;&nbsp;</td>
+																			<td width="130"><INPUT TYPE="text" name="total" value="0" style="width:130px; text-align:right" readOnly="true"></td>
+																		</tr>
+																		
+																	</table>
+																</div>
 															</td>
+															
+
 														</tr>
-														<tr>
-															<td width="10"></td>
-															<td width="100" align="right" style="font-weight: bold;">Subtotal&nbsp;&nbsp;</td>
-															<td width="130"><INPUT TYPE="text" name="subtotal" value="0" style="width:130px; text-align:right" readOnly="true"></td>
-														</tr>
-														<!--
-														<tr>
-															<td width="80"></td>
-															<td width="90"></td>
-															<td width="120" align="right" style="font-weight: bold;">Descuento&nbsp;&nbsp;</td>
-															<td width="130"><INPUT TYPE="text" name="descuento" value="0" style="width:130px; text-align:right" readOnly="true"></td>
-														</tr>
-														-->
-														
-														<tr id="tr_ieps">
-															<td width="10"></td>
-															<td width="100" align="right" style="font-weight: bold;">IEPS</td>
-															<td width="130"><input type="text" name="total_ieps" value="0" style="width:130px; text-align:right;" readOnly="true"></td>
-														</tr>
-														<tr>
-															<td width="10"></td>
-															<td width="100" align="right" style="font-weight: bold;">IVA&nbsp;&nbsp;</td>
-															<td width="130"><INPUT TYPE="text" name="totimpuesto" value="0" style="width:130px; text-align:right" readOnly="true"></td>
-														</tr>
-														<tr>
-															<td width="10"></td>
-															<td width="100" align="right" style="font-weight: bold;">Retenci&oacute;n&nbsp;&nbsp;</td>
-															<td width="130"><INPUT TYPE="text" name="retencion" value="0" style="width:130px; text-align:right" readOnly="true"></td>
-														</tr>
-														<tr>
-															<td width="10"></td>
-															<td width="110" align="right" style="font-weight: bold;">Total&nbsp;&nbsp;</td>
-															<td width="130"><INPUT TYPE="text" name="total" value="0" style="width:130px; text-align:right" readOnly="true"></td>
-														</tr>
+
 													</table>
+													
 												</td>
 											</tr>
 											
@@ -454,8 +435,6 @@
 								</table>
                                 
                             </div>
-                            
-                                                      
 
 
                         </div>
