--- a/erp-quimicos/src/main/webapp/vm/com_requisicion/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/com_requisicion/startup.vm
@@ -7,22 +7,18 @@
 
         <!--  css for this catalogo -->
         <link rel="stylesheet" href="../../css/modalbox/com_requisicion/formaCom_requisicion.css" type="text/css" />
-
         <link rel="stylesheet" href="../../css/modalbox/cxprepantiguedadsaldos/formaBuscaproveedor.css" type="text/css" />
-
         <link rel="stylesheet" href="../../css/modalbox/comordencompra/formaBuscapresentaciones.css" type="text/css" />
         <link rel="stylesheet" href="../../css/modalbox/comordencompra/formaBuscaproducto.css" type="text/css" />
-        <link rel="stylesheet" href="../../css/modalbox/comordencompra/formaCancelaEmision.css" type="text/css" />
-
+        
         <!--  js for this catalogo -->
         <script type="text/javascript" src="../../js/components/jquery-form/jquery-form.js"></script>
-	<script type="text/javascript" src="../../js/components/formatearnumeros/agrega_comas.js"></script>
+		<script type="text/javascript" src="../../js/components/formatearnumeros/agrega_comas.js"></script>
 
         <script type="text/javascript" src="../../js/components/modalbox/cxprepantiguedadsaldos/modalboxBuscaproveedor.js"></script>
 
         <script type="text/javascript" src="../../js/components/modalbox/comordencompra/modalboxBuscapresentacion.js"></script>
         <script type="text/javascript" src="../../js/components/modalbox/comordencompra/modalboxBuscaproducto.js"></script>
-        <script type="text/javascript" src="../../js/components/modalbox/comordencompra/modalboxCancelaEmision.js"></script>
 
 
         <script type="text/javascript" src="../../js/components/modalbox/com_requisicion/modalboxCom_requisicion.js"></script>
@@ -158,96 +154,121 @@
                                     <div id="tabx-1" class="contenidoPes" >
 
 
-                                        <table border="0" bordercolor="red" style="margin:0; padding:0;">
+                                        <table border="0" style="margin:0; padding:0;">
                                                 <tr>
-                                                    <td >&nbsp;</td>
-                                                    <td width="10" >&nbsp;</td>
-                                                    <td  >&nbsp;</td>
-                                                    <td >&nbsp;</td>
+                                                    <td width="300"></td>
+                                                    <td width="10"></td>
+                                                    <td width="380"></td>
+                                                    <td width="10"></td>
                                                 </tr>
                                                 <tr>
-                                                    <td colspan="4">  
+                                                    <td width="250">
                                                         <table border="0" bordercolor="blue" >
                                                             <tr>
-                                                                <td >F&oacute;lio&nbsp;</td>
-                                                                <td width="125"><INPUT TYPE="text" name="folio_requisicion" style="width:120px;"></td>
-                                                                <td >&nbsp;</td>
-                                                                <td >&nbsp;</td>
-                                                                <td ><input type="button" id="descargarpdf" value="Generar PDF" style="width:110px; font-weight: bold;"></td>
+                                                                <td width="100">F&oacute;lio&nbsp;</td>
+                                                                <td width="125"><INPUT TYPE="text" name="folio_requisicion" style="width:125px;"></td>
+                                                                <td width="25">&nbsp;</td>
                                                             </tr>                                                           
                                                             <tr>
-                                                                <td >&nbsp;</td>
+                                                                <td width="100">&nbsp;</td>
                                                                 <td width="125"></td>
-                                                                <td >&nbsp;</td>
-                                                                <td >Observaciones:</td>
-                                                                <td >&nbsp;</td>                                                                                                                          															
+                                                                <td width="25">&nbsp;</td>                                                                                                                       															
                                                             </tr>
                                                             <tr>
-                                                                <td >Fecha&nbsp;compromiso</td>
-                                                                <td width="125"><INPUT TYPE="text" name="fecha_compromiso" style="width:120px;"></td>
-                                                                <td ><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_fecha_compromiso"></div></td>
-                                                                <td rowspan="3">
-                                                                    <textarea name="observaciones"   cols="70" style="width:350px; resize: none;"></textarea>
-                                                                </td >
-                                                                <td >&nbsp;</td>
+                                                                <td width="100">Fecha&nbsp;Compromiso</td>
+                                                                <td width="125"><INPUT TYPE="text" name="fecha_compromiso" style="width:125px;"></td>
+                                                                <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_fecha_compromiso"></div></td>
+                                                            </tr>
+                                                        </table>
+                                                    </td>
+                                                    <td width="10" >&nbsp;</td>
+                                                    <td width="380" valign="top" >
+                                                        <table border="0">
+                                                            <tr>
+                                                                <td width="10"></td>
+                                                                <td width="345">Observaciones</td>
+                                                                <td width="25"></td>
                                                             </tr>
                                                             <tr>
-                                                                <td colspan="4" align="right" >&nbsp;</td>
-                                                                <td><INPUT TYPE="button" id="cancelar_requisicion" value="Cancelar Requisicion" style="width:110px; font-weight: bold;"></td>
+                                                                <td width="10"></td>
+                                                                <td width="345">
+																	<textarea name="observaciones" rows="3" cols="60" style="width:345px; resize:none;"></textarea>
+                                                                </td>
+                                                                <td width="25"></td>
                                                             </tr>
-                                                            <tr>
-                                                                <td colspan="5">&nbsp;</td>
+                                                        </table>
+                                                    </td>
+                                                    <td width="10">&nbsp;</td>
+                                                </tr>
+                                                
+                                                
+                                                <tr>
+                                                    <td colspan="4">
+                                                        <table border="0" class="gral">
+                                                            <tr>																
+                                                                <td width="100">Solicita</td>
+                                                                <td width="200"><select name="select_empleado" style="width:200px;" title="Seleccionar nombre del Empleado que solicita"></select></td>
+                                                                <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_empleado"></div></td>
+                                                                <td width="80">Departamento</td>
+                                                                <td width="260"><select name="select_departamento" style="width:260px;" title="Seleccionar Departamento"></select></td>
+                                                                <td width="25"><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_departamento"></div></td>
                                                             </tr>
                                                         </table>
                                                     </td>
                                                 </tr>
-
+                                                
                                                 <tr>
-                                                    <td colspan="5" align="right">
+                                                    <td colspan="4">
+                                                        <table border="0" class="gral">
+                                                            <tr>																
+                                                                <td width="100"><span id="etiqueta_folio_pedido">Folio Pedido</span></td>
+                                                                <td width="125"><INPUT TYPE="text" name="folio_pedido" style="width:125px;"></td>
+                                                                <td width="100"></td>
+                                                                <td width="25"></td>
+                                                                <td width="150"><INPUT TYPE="button" id="cancelar_requisicion" value="Cancelar" style="width:110px; font-weight:bold;"></td>
+                                                                <td width="150"><input type="button" id="descargarpdf" value="PDF" style="width:110px; font-weight: bold;"></td>
+                                                                <td width="50"></td>
+                                                            </tr>
+                                                        </table>
                                                     </td>
                                                 </tr>
+                                                
                                                 <tr>
-                                                    <td colspan="5">
-                                                        <table border="0" bordercolor="blue" class="gral">
-                                                            <tr><td colspan="8" height="2"></td></tr>
+                                                    <td colspan="4">
+                                                        <table border="0" class="gral">
                                                             <tr>																
-                                                                <td width="10"></td>
                                                                 <td width="70">C&oacute;digo&nbsp;producto</td>
                                                                 <td width="125"><INPUT TYPE="text" name="sku_producto" style="width:120px;"></td>
-                                                                <td width="50"><a  href="busca_sku">(Buscar)</a></td>
+                                                                <td width="50"><a  href="agregar_producto">(Agregar)</a></td>
                                                                 <td width="45">Nombre</td>
                                                                 <td width="300"><INPUT TYPE="text" name="nombre_producto" style="width:300px;" readOnly="true"></td>
-                                                                <td width="55"><a  href="agregar_producto">(Agregar)</a></td>
+                                                                <td width="55"><a  href="busca_sku">(Buscar)</a></td>
                                                                 <td width="15"></td>
-
                                                             </tr>
                                                         </table>
                                                     </td>
                                                 </tr>
 
                                                 <tr class="registros">
-                                                    <td colspan="5" style="border-top: 1px solid #C1DAD7; border-bottom: 1px solid #C1DAD7; border-left: 1px solid #FFFFFF; border-right: 1px solid #FFFFFF;">
-
-                                                            <table >
-                                                                    <thead>
-                                                                            <tr class="registros_pagos">
-                                                                                    <td class="grid" id="td_eliminar" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="61"><div class="delete">&nbsp;#</div></td>
-                                                                                    <td class="grid" id="td_sku" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="116">&nbsp;C&oacute;digo</td>
-                                                                                    <td class="grid" id="td_nombre" style="background-color: rgb(180, 180, 180);"  width="202">&nbsp;Descripci&oacute;n</td>
-                                                                                    <td class="grid" style="background-color: rgb(180, 180, 180);" width="90">&nbsp;Unidad</td>
-                                                                                    <td class="grid" style="background-color: rgb(180, 180, 180);" width="100">&nbsp;Presentaci&oacute;n</td>
-                                                                                    <td class="grid" style="background-color: rgb(180, 180, 180);" width="110">&nbsp;Cantidad</td>
-                                                                            </tr>                                                                            
-                                                                    </thead>
-                                                            </table>
-                                                            <div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:870; height: 115px; border:1px solid #C1DAD7 !important;">
-                                                                    <table >
-                                                                            <tbody style="background-color: #FFFFFF;" valign="top" id="grid_productos">
-																			</tbody>
-																																					
-                                                                    </table>
-                                                            </div>
-
+                                                    <td colspan="4" style="border-top: 1px solid #C1DAD7; border-bottom: 1px solid #C1DAD7; border-left: 1px solid #FFFFFF; border-right: 1px solid #FFFFFF;">
+														<table >
+															<thead>
+																<tr class="registros_pagos">
+																	<td class="grid" id="td_eliminar" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="61"><div class="delete">&nbsp;#</div></td>
+																	<td class="grid" id="td_sku" style="background-color: rgb(180, 180, 180); border-botton: 0px none;" width="116">&nbsp;C&oacute;digo</td>
+																	<td class="grid" id="td_nombre" style="background-color: rgb(180, 180, 180);"  width="202">&nbsp;Descripci&oacute;n</td>
+																	<td class="grid" style="background-color: rgb(180, 180, 180);" width="90">&nbsp;Unidad</td>
+																	<td class="grid" style="background-color: rgb(180, 180, 180);" width="100">&nbsp;Presentaci&oacute;n</td>
+																	<td class="grid" style="background-color: rgb(180, 180, 180);" width="110">&nbsp;Cantidad</td>
+																</tr>                                                                            
+															</thead>
+														</table>
+														<div style="overflow:scroll; overflow-x: hidden; overflow-y: auto;  width:870; height: 115px; border:1px solid #C1DAD7 !important;">
+															<table >
+																<tbody style="background-color: #FFFFFF;" valign="top" id="grid_productos">
+																</tbody>
+															</table>
+														</div>
                                                     </td>
                                                 </tr>
 
