--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -386,6 +386,8 @@
 													<li class="topline"><a href="../invcontrolcostos/startup.agnux">Control de Costos</a></li>
 													<li class="topline"><a href="../invactualizaprecios/startup.agnux">Actualizar Precios</a></li>
 													<li class="topline"><a href="../invcarga/startup.agnux">Carga de Inventario F&iacute;sico</a></li>
+													
+													
 													<!--
 													<li class="topline"><a href="#">Actualizar Precios</a></li>
 													<li class="topline"><a href="#">Existencias F&iacute;sicas</a></li>
@@ -482,7 +484,7 @@
 									</li>
 
 
-
+									<!--
 									<li class="accessible">
 										<a href="http://jdsharp.us" class="accessible">Rutas &raquo;</a>
 										<ul>
@@ -498,6 +500,29 @@
 												<a href="#" class="sub">Procesos &raquo;</a>
 												<ul>
 													<li class="topline"><a href="../logasignarutas/startup.agnux">Asignaci&oacute;n</a></li>
+												</ul>
+											</li>
+										</ul>
+									</li>
+									-->
+
+
+									<li class="accessible">
+										<a href="http://jdsharp.us" class="accessible">Rutas &raquo;</a>
+										<ul>
+											<li>
+												<a href="#" class="sub">Cat&aacute;logos &raquo;</a>
+												<ul>
+													<li><a href="../logvehiculos/startup.agnux">Unidades</a></li>
+													<li><a href="../logoperadores/startup.agnux">Operadores</a></li>
+												</ul>
+											</li>
+
+											<li>
+												<a href="#" class="sub">Procesos &raquo;</a>
+												<ul>
+													<li class="topline"><a href="../invcargadoc/startup.agnux">Carga de Documentos</a></li>
+													<li class="topline"><a href="../logadmviaje/startup.agnux">Administrador de Viajes</a></li>
 												</ul>
 											</li>
 										</ul>
