git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@1472 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -492,7 +492,7 @@
 												<a href="#" class="sub">Procesos &raquo;</a>
 												<ul>
 													<li class="topline"><a href="../invcargadoc/startup.agnux">Carga de Documentos</a></li>
-													<li class="topline"><a href="../logasignarutas/startup.agnux">Administrador de Viajes</a></li>
+													<li class="topline"><a href="../logadmviaje/startup.agnux">Viajes</a></li>
 												</ul>
 											</li>
 										</ul>
