--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -491,6 +491,8 @@
 											<li>
 												<a href="#" class="sub">Procesos &raquo;</a>
 												<ul>
+													<li class="topline"><a href="../logasignarutas/startup.agnux">Asignaci&oacute;n</a></li>
+													
 													<li class="topline"><a href="../invcargadoc/startup.agnux">Carga de Documentos</a></li>
 													<li class="topline"><a href="../logadmviaje/startup.agnux">Viajes</a></li>
 												</ul>
